[gd_scene load_steps=2 format=3 uid="uid://b1qcjuvuo5gty"]

[ext_resource type="Script" uid="uid://dep4rnh6ake6x" path="res://addons/godot_asset_loader/resource_card.gd" id="1_card"]

[node name="ResourceCard" type="Panel"]
custom_minimum_size = Vector2(450, 150)
script = ExtResource("1_card")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="PreviewPanel" type="Panel" parent="VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2

[node name="Preview" type="TextureRect" parent="VBoxContainer/HBoxContainer/PreviewPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
expand_mode = 1
stretch_mode = 5

[node name="InfoContainer" type="VBoxContainer" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Title" type="Label" parent="VBoxContainer/HBoxContainer/InfoContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "Resource Title"

[node name="Type" type="Label" parent="VBoxContainer/HBoxContainer/InfoContainer"]
layout_mode = 2
text = "Resource Type"

[node name="AuthorLicense" type="Label" parent="VBoxContainer/HBoxContainer/InfoContainer"]
layout_mode = 2
text = "Unknown - Unknown"

[node name="Description" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Resource description goes here."
autowrap_mode = 2